# teste_fiesc_big_data

./: Dockerfile  README.md  docker-compose.yml  main.ipynb  pyproject.toml  try_module.py
docs/: Dicionário.md
fiesc_big_data/: __init__.py  control.py  etl.py  ingest.py
fiesc_big_data/assents/: config.yml
fiesc_big_data/raw/: cursos.csv  disciplinas.csv  turmas.csv
fiesc_big_data/sql/: init.sql  rule.sql  situacao_notas_alunos.sql  situacao_presenca_alunos.sql
