[tool.poetry]
name = "fiesc-big-data"
version = "0.1.0"
description = ""
authors = ["antenoraires <antenoraires37@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
gspread = "^6.2.0"
pathlib = "^1.0.1"
oauth2client = "^4.1.3"
minio = "^7.2.15"
pandas = "^2.2.3"
deltalake = "^0.25.5"
s3fs = "^2025.3.2"
pyspark = "^3.5.5"
delta-spark = "^3.3.1"
sqlalchemy = "^2.0.40"
psycopg2-binary = "^2.9.10"
pyyaml = "^6.0.2"
jinja2 = "^3.1.6"
python-dotenv = "^1.1.0"

[tool.ruff]
# Seleção de regras
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "W",   # pycodestyle warnings
    "I",   # isort (import sorting)
    "C",   # flake8-comprehensions
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
    "YTT", # flake8-2020
    "ANN", # flake8-annotations
    "S",   # flake8-bandit (security)
    "RUF", # Regras específicas do Ruff
]

# Regras para ignorar
ignore = ["ANN101", "E501"]

# Configuração específica de plugins
[tool.ruff.isort]
known-first-party = ["meuprojeto"]

[tool.ruff.flake8-annotations]
allow-star-arg-any = true

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]  # Ignora unused imports in __init__.py
"tests/*.py" = ["S101"]   # Ignora security asserts in tests


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
